downgrades to java 17